Missing files, updated versions

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
-# Hidden files
-.DS_Store
-*humbs.db
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-# IDE Files
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# OS files
+*.db
+*.DS_Store
+
+# Jetbrains
 .idea/
+
+# Eclipse
 .project
+
+# Other editors
 /.externalToolBuilders/
 /.settings/
