Added code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,12 @@ git:
 notifications:
  email: false
 
-# Before we run scripts
-before_script:
- - go get -u golang.org/x/lint/golint
-
-# Run scripts in parallel
+# Run all scripts
 script:
  - golint
- - go test -v ./...
- - go vet -copylocks=false
+ - go vet
+ - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+# After build success
+after_success:
+ - bash <(curl -s https://codecov.io/bash)
