--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ git:
 notifications:
  email: false
 
+# Before we run scripts
+before_script:
+ - go get -u golang.org/x/lint/golint
+
 # Run all scripts
 script:
  - golint
