--- a/.golangci.yml
+++ b/.golangci.yml
@@ -341,7 +341,6 @@ linters:
     - sqlclosecheck
     - nolintlint
     - gci
-    - goconst
   disable:
     - gocritic # use this for very opinionated linting
     - gochecknoglobals
@@ -354,6 +353,7 @@ linters:
     - nestif
     - nlreturn
     - dupl
+    - goconst # Needs more work to enable
   disable-all: false
   presets:
     - bugs
