--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 # These are supported funding model platforms
 
-custom: https://mrz1818.com/?tab=tips&af=go-validate
+github: mrz1836
+custom: https://mrz1818.com/?tab=tips&utm_source=github&utm_medium=sponsor-link&utm_campaign=go-validate&utm_term=go-validate&utm_content=go-validate
